Complete site redesign

--- a/content/25.md
+++ b/content/25.md
@@ -1,349 +1,309 @@
 ---
-layout: resources
+layout: default
+title: Jeremy D. Cherry
 permalink: /25
 ---
-<!-- 2021 -->
-<div class="main-wrapper">
-<div class="main-inner">	
-<div class="row">
-  <div class="column-third col-third-1_listen">
-  	<div class="bio">
-		<h1 class="listen">My favorite records that came out in...</h1>
-	</div>
-  </div>
-  <!-- 2021 -->
-  <div class="column-third col-third-2_listen">
-  	<h3 class="listen">2021</h3>
-  	<h5 class="listen"><a href="https://open.spotify.com/playlist/0nMSOh5lGXqii6XWfPCF8Q?si=78036ef7cee44961" class="playlist">Spin the Playlist</a></h5>
-  </div>	
-  <!-- List -->
-  <div class="column-third col-third-3_listen">
-	<h2 class="listen">01.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1qMFjBarjO2xD15BwXZguD?si=y6-4BU5WTiuwN2kapqy_7Q" class="record"><em>Pressure Machine</em></a></h2>
-	<h4 class="listen">The Killers</h4><br/>
-	<h2 class="listen">02.&nbsp;&nbsp;<a href="https://open.spotify.com/album/69jQsPvJzMvcb2fGqI2qaB?si=j68MzS30SFGkRj34AyyjmA" class="record"><em>I Don't Live Here Anymore</em></a></h2>
-	<h4 class="listen">The War on Drugs</h4><br/>
-	<h2 class="listen">03.&nbsp;&nbsp;<a href="https://open.spotify.com/album/66A7X1EqFQEEvuE5Nezqrl?si=N5O45Ry1RBW_PhSvUQWcMQ" class="record"><em>Good Woman</em></a></h2>
-	<h4 class="listen">The Staves</h4><br/>
-	<h2 class="listen">04.&nbsp;&nbsp;<a href="https://open.spotify.com/album/5Hj9DO1au6m5BcdosyjODG?si=Ekw0mfXCSDWPjv1nBq3LQA" class="record"><em>A Billion Little Lights</em></a></h2>
-	<h4 class="listen">Wild Pink</h4><br/>
-	<h2 class="listen">05.&nbsp;&nbsp;<a href="https://open.spotify.com/album/09P40BHcaue9iF4QasXMTK?si=-8-2JvpPRDiTV4tG6Caklw" class="record"><em>Collections From The Whiteout</em></a></h2>
-	<h4 class="listen">Ben Howard</h4><br/>
-	<h2 class="listen">06.&nbsp;&nbsp;<a href="https://open.spotify.com/album/7v5Vuz4HyHldAgTG9NpcFY?si=X0V0TNDCSEWRUn42jTJgKQ" class="record"><em>Changephobia</em></a></h2>
-	<h4 class="listen">Rostam</h4><br/>
-	<h2 class="listen">07.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3YbMxdapL6mvSQjosFkc0T?si=tquaJkzkQh-Iq1_H490OsQ" class="record"><em>How Long Do You Think It's Gonna Last?</em></a></h2>
-	<h4 class="listen">Big Red Machine</h4><br/>
-	<h2 class="listen">08.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3GQfoIqcz1eNgQXsPkzVk0?si=nEt51DhsSIutgIyNsFR1NQ" class="record"><em>Head of Roses</em></a></h2>
-	<h4 class="listen">Flock of Dimes</h4><br/>
-	<h2 class="listen">09.&nbsp;&nbsp;<a href="https://open.spotify.com/album/0KuAi49HdkjHiuL7TjKsud?si=snYw_TM3RLeSkd3qwizMAA" class="record"><em>Screen Violence</em></a></h2>
-	<h4 class="listen">CHVRCHES</h4><br/>
-	<h2 class="listen">10.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3IQRHa9iVLsGlSuVHiHZ3A?si=O9iPnMFBTMOzY5LPWB8mEw" class="record"><em>Little Oblivions</em></a></h2>
-	<h4 class="listen">Julien Baker</h4><br/>
-	<h2 class="listen">11.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6SV7Sl0rmVeMuqYlMMAqQB?si=W_hRy80YSK-543Vx8BRKFg" class="record"><em>Gold-Diggers Sound</em></a></h2>
-	<h4 class="listen">Leon Bridges</h4><br/>
-	<h2 class="listen">12.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2opiJIrYClkW7qD2vM6vSi?si=aribACNsQVacW3hXwDFhFg" class="record"><em>Hope for Sale</em></a></h2>
-	<h4 class="listen">Chiiild</h4><br/>
-	<h2 class="listen">13.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6hlXrXeAAxPOZ4y5lonxiQ?si=gRfN9OFEQ4KqcVyC2w4kRQ" class="record"><em>A Pillar of Salt</em></a></h2>
-	<h4 class="listen">Noah Gunderson</h4><br/>
-	<h2 class="listen">14.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2JmfwvRDitJlTUoLCkp61z?si=xC6wqWifSoyfwU2-bc4f8A" class="record"><em>Sob Rock</em></a></h2>
-	<h4 class="listen">John Mayer</h4><br/>
-	<h2 class="listen">15.&nbsp;&nbsp;<a href="https://open.spotify.com/album/5CnpZV3q5BcESefcB3WJmz?si=4uscAEjYQOu5510KQpErRA" class="record"><em>Donda</em></a></h2>
-	<h4 class="listen">Kanye West </h4><br/>
-	<h2 class="listen">16.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3ShtO5VCYa3ctlR5uzLWBa?si=c5GkKMT9TYe9Bapxy0jiIQ" class="record"><em>Promises</em></a></h2>
-	<h4 class="listen">Floating Points, Pharoah Sanders</h4><br/>
-	<h2 class="listen">17.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2ZURBTlzCG2WCMuEwvRBaK?si=EjsYSxneRWKDQcM-mz0gKA" class="record"><em>Watchhouse</em></a></h2>
-	<h4 class="listen">Watchhouse</h4><br/>
-	<h2 class="listen">18.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1z8Ljm0ST8ICL9lkJNZSev?si=_mv3sJR4Q16LiOkgOpoHJg" class="record"><em>Obsidian</em></a></h2>
-	<h4 class="listen">Jónsi</h4><br/>
-	<h2 class="listen">19.&nbsp;&nbsp;<a href="https://open.spotify.com/album/61o3mZcWhcH9DbQjCHxCV4?si=3q04Ol3JTMyHuNz_lFSH_A" class="record"><em>January Flower</em></a></h2>
-	<h4 class="listen">Mat Kearney</h4><br/>
-	<h2 class="listen">20.&nbsp;&nbsp;<a href="https://open.spotify.com/album/21jF5jlMtzo94wbxmJ18aa?si=p3neLHUhSb2emLtYZIrYuA" class="record"><em>30</em></a></h2>
-	<h4 class="listen">Adele</h4><br/>
-	<h2 class="listen">21.&nbsp;&nbsp;<a href="https://open.spotify.com/album/76pQf98XjjF5RZIniiev2d?si=BX2iJ9HcTdig9anqmXwODw" class="record"><em>In Heaven</em></a></h2>
-	<h4 class="listen">Strand of Oaks</h4><br/>
-	<h2 class="listen">22.&nbsp;&nbsp;<a href="https://open.spotify.com/album/5mIT7iw9w64DMP2vxP9L1f?si=joQ8yRgZQnK2IUeqNGzeiQ" class="record"><em>In These Silent Days</em></a></h2>
-	<h4 class="listen">Brandi Carlile</h4><br/>
-	<h2 class="listen">23.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6SPUtbeCQiPGej0t5RBasE?si=1YSqpUNORTaq5f7tv34Orw" class="record"><em>Take the Sadness Our of Saturday Night</em></a></h2>
-	<h4 class="listen">Bleachers</h4><br/>
-	<h2 class="listen">24.&nbsp;&nbsp;<a href="https://open.spotify.com/album/45ba6QAtNrdv6Ke4MFOKk9?si=YikK8AzvRmuH9CR4BDZT2A" class="record"><em>CALL ME IF YOU GET LOST</em></a></h2>
-	<h4 class="listen">Tyler, the Creator</h4><br/>
-	<h2 class="listen">25.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2nwfSapJ3YIq7Ofad4Vuh1?si=1FKziqX6Sjivwc7Wa8qTEA" class="record"><em>Home Video</em></a></h2>
-	<h4 class="listen">Lucy Dacus</h4><br/>
-  </div>
-</div>
-</div>
-</div>
 
+# My Top Twenty-Five Records
+
+## An annual list of my top twenty-five records that came out that year
+
+---
+
+<!-- 2021 -->
+
+# 2021
+
+1. [_Pressure Machine_](https://open.spotify.com/album/1qMFjBarjO2xD15BwXZguD?si=y6-4BU5WTiuwN2kapqy7Q"), The Killers
+
+2. [_I Don't Live Here Anymore_](https://open.spotify.com/album/69jQsPvJzMvcb2fGqI2qaB?si=j68MzS30SFGkRj34AyyjmA"), The War on Drugs
+
+3. [_Good Woman_](https://open.spotify.com/album/66A7X1EqFQEEvuE5Nezqrl?si=N5O45Ry1RBWPhSvUQWcMQ"), The Staves
+
+4. [_A Billion Little Lights_](https://open.spotify.com/album/5Hj9DO1au6m5BcdosyjODG?si=Ekw0mfXCSDWPjv1nBq3LQA"), Wild Pink
+
+5. [_Collections From The Whiteout_](https://open.spotify.com/album/09P40BHcaue9iF4QasXMTK?si=-8-2JvpPRDiTV4tG6Caklw"), Ben Howard
+
+6. [_Changephobia_](https://open.spotify.com/album/7v5Vuz4HyHldAgTG9NpcFY?si=X0V0TNDCSEWRUn42jTJgKQ"), Rostam
+
+7. [_How Long Do You Think It's Gonna Last?_](https://open.spotify.com/album/3YbMxdapL6mvSQjosFkc0T?si=tquaJkzkQh-Iq1H490OsQ"), Big Red Machine
+
+8. [_Head of Roses_](https://open.spotify.com/album/3GQfoIqcz1eNgQXsPkzVk0?si=nEt51DhsSIutgIyNsFR1NQ"), Flock of Dimes
+
+9. [_Screen Violence_](https://open.spotify.com/album/0KuAi49HdkjHiuL7TjKsud?si=snYwTM3RLeSkd3qwizMAA"), CHVRCHES
+
+10. [_Little Oblivions_](https://open.spotify.com/album/3IQRHa9iVLsGlSuVHiHZ3A?si=O9iPnMFBTMOzY5LPWB8mEw"), Julien Baker
+
+11. [_Gold-Diggers Sound_](https://open.spotify.com/album/6SV7Sl0rmVeMuqYlMMAqQB?si=WhRy80YSK-543Vx8BRKFg"), Leon Bridges
+
+12. [_Hope for Sale_](https://open.spotify.com/album/2opiJIrYClkW7qD2vM6vSi?si=aribACNsQVacW3hXwDFhFg"), Chiiild
+
+13. [_A Pillar of Salt_](https://open.spotify.com/album/6hlXrXeAAxPOZ4y5lonxiQ?si=gRfN9OFEQ4KqcVyC2w4kRQ"), Noah Gunderson
+
+14. [_Sob Rock_](https://open.spotify.com/album/2JmfwvRDitJlTUoLCkp61z?si=xC6wqWifSoyfwU2-bc4f8A"), John Mayer
+
+15. [_Donda_](https://open.spotify.com/album/5CnpZV3q5BcESefcB3WJmz?si=4uscAEjYQOu5510KQpErRA"), Kanye West 
+
+16. [_Promises_](https://open.spotify.com/album/3ShtO5VCYa3ctlR5uzLWBa?si=c5GkKMT9TYe9Bapxy0jiIQ"), Floating Points, Pharoah Sanders
+
+17. [_Watchhouse_](https://open.spotify.com/album/2ZURBTlzCG2WCMuEwvRBaK?si=EjsYSxneRWKDQcM-mz0gKA"), Watchhouse
+
+18. [_Obsidian_](https://open.spotify.com/album/1z8Ljm0ST8ICL9lkJNZSev?si=mv3sJR4Q16LiOkgOpoHJg"), Jónsi
+
+19. [_January Flower_](https://open.spotify.com/album/61o3mZcWhcH9DbQjCHxCV4?si=3q04Ol3JTMyHuNzlFSHA"), Mat Kearney
+
+20. [_30_](https://open.spotify.com/album/21jF5jlMtzo94wbxmJ18aa?si=p3neLHUhSb2emLtYZIrYuA"), Adele
+
+21. [_In Heaven_](https://open.spotify.com/album/76pQf98XjjF5RZIniiev2d?si=BX2iJ9HcTdig9anqmXwODw"), Strand of Oaks
+
+22. [_In These Silent Days_](https://open.spotify.com/album/5mIT7iw9w64DMP2vxP9L1f?si=joQ8yRgZQnK2IUeqNGzeiQ"), Brandi Carlile
+
+23. [_Take the Sadness Our of Saturday Night_](https://open.spotify.com/album/6SPUtbeCQiPGej0t5RBasE?si=1YSqpUNORTaq5f7tv34Orw"), Bleachers
+
+24. [_CALL ME IF YOU GET LOST_](https://open.spotify.com/album/45ba6QAtNrdv6Ke4MFOKk9?si=YikK8AzvRmuH9CR4BDZT2A"), Tyler, the Creator
+
+25. [_Home Video_](https://open.spotify.com/album/2nwfSapJ3YIq7Ofad4Vuh1?si=1FKziqX6Sjivwc7Wa8qTEA"), Lucy Dacus
+
+##### Here's my favorite track from each record:
+
+<a href="" class="btn_secondary">Listen on Spotify ›</a>
+
+---
 
 <!-- 2020 -->
-<div class="main-wrapper">
-<div class="main-inner">	
-<div class="row">
-  <div class="column-third col-third-1_listen">
-  	&nbsp;
-  </div>
-  <!-- 2020 -->
-  <div class="column-third col-third-2_listen">
-  	<h3 class="listen">2020</h3>
-  	<h5 class="listen"><a href="https://open.spotify.com/playlist/7JX8juHaJHEeMxg9fuQT0J?si=_JRhTGIHSN--Do-afFOJgg" class="playlist">Spin the Playlist</a></h5>
-  </div>	
-  <!-- List -->
-  <div class="column-third col-third-3_listen">
-	<h2 class="listen">01.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6jqJNgfl234UYEWeP3iRF1?si=f8KkpOk4St-NioOZ1Jn69g" class="record"><em>Half Moon Light</em></a></h2>
-	<h4 class="listen">The Lone Bellow</h4><br/>
-	<h2 class="listen">02.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2xECuqnvvmVktV7UO8Dd3s?si=y6THBrQlSXGtn7UnLRrVzw" class="record"><em>Punisher/Copycat Killer</em></a></h2>
-	<h4 class="listen">Phoebe Bridgers</h4><br/>
-	<h2 class="listen">03.&nbsp;&nbsp;<a href="https://open.spotify.com/album/0lmjCPEcec2k6L7ysNIcd3?si=ANdthlUuQEmsdkYq2oq11w" class="record"><em>Shore</em></a></h2>
-	<h4 class="listen">Fleet Foxes</h4><br/>
-	<h2 class="listen">04.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2VeOfqGkgcCUk6dZejfm4f?si=kYQKay1vTMe_pSVrgIgzLQ" class="record"><em>Transmigration Blues</em></a></h2>
-	<h4 class="listen">The Dead Tongues</h4><br/>
-	<h2 class="listen">05.&nbsp;&nbsp;<a href="https://open.spotify.com/album/5PLt7H7bUEQeKPdWhWf4SY?si=I0TXY8aeSgaIOE-RKKceXA" class="record"><em>Beginners</em></a></h2>
-	<h4 class="listen">Christian Lee Hutson</h4><br/>
-	<h2 class="listen">06.&nbsp;&nbsp;<a href="https://open.spotify.com/album/27C6iNWoN1gmSHIpPGVgkS?si=AjJCSnl8TvSdw0246J8hiw" class="record"><em>The Avalanche</em></a></h2>
-	<h4 class="listen">Owen</h4><br/>
-	<h2 class="listen">07.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1KkBDNtkZDW8COUNKAWRPw?si=JPbOkvE4ToCpM8ThuX7IuA" class="record"><em>Cannot Be, Whatsoever</em></a></h2>
-	<h4 class="listen">Novo Amor</h4><br/>
-	<h2 class="listen">08.&nbsp;&nbsp;<a href="https://open.spotify.com/album/5XIafkwTpyvL7jjLJx1xKz?si=gfvmmR5SQEaPl9V9ZHFPHQ" class="record"><em>Reunions</em></a></h2>
-	<h4 class="listen">Jason Isbell & the 400 Unit</h4><br/>
-	<h2 class="listen">09.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2KAPJ40On8JY1Yt64JJgTk?si=ZtTWbAGXTpGy45YwPrBb6Q" class="record"><em>Free Love</em></a></h2>
-	<h4 class="listen">Sylvan Esso</h4><br/>
-	<h2 class="listen">10.&nbsp;&nbsp;<a href="https://open.spotify.com/album/31qVWUdRrlb8thMvts0yYL?si=DIilFMW1TPa5-M0ZVdqJJA" class="record"><em>The Slow Rush</em></a></h2>
-	<h4 class="listen">Tame Impala</h4><br/>
-	<h2 class="listen">11.&nbsp;&nbsp;<a href="https://open.spotify.com/album/0pILyYJr65rEAWnogtd8Xt?si=oS-7xn7_T3em6u3JZV62cg" class="record"><em>Shape & Destroy</em></a></h2>
-	<h4 class="listen">Ruston Kelly</h4><br/>
-	<h2 class="listen">12.&nbsp;&nbsp;<a href="https://open.spotify.com/album/4wSb7OhVUzw3u76lta9fJw?si=YoqSt4uoQKWXmDpj-jGglw" class="record"><em>Suddenly</em></a></h2>
-	<h4 class="listen">Caribou</h4><br/>
-	<h2 class="listen">13.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1tYHjJ50WowcNvDTLdf6Wo?si=pYT5TUVYTJOGTO4H3kVUlg" class="record"><em>The Ascension</em></a></h2>
-	<h4 class="listen">Sufjan Stevens</h4><br/>
-	<h2 class="listen">14.&nbsp;&nbsp;<a href="https://open.spotify.com/album/3jjIZaP21vWBSrmQlsXrtv?si=RJlCJnkxT0qoe6fzwvyK6A" class="record"><em>Peopled with Dreams</em></a></h2>
-	<h4 class="listen">John Mark McMillan</h4><br/>
-	<h2 class="listen">15.&nbsp;&nbsp;<a href="https://open.spotify.com/album/0o5xjCboti8vXhdoUG9LYi?si=3qcx52znRFmvZKG0JzKuIw" class="record"><em>Notes on a Conditional Form</em></a></h2>
-	<h4 class="listen">The 1975</h4><br/>
-	<h2 class="listen">16.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1XlM4F3RRu52tpv8YXM1O4?si=GP2ybncUS0OFH71Zx9rniw" class="record"><em>Through A Dark Wood</em></a></h2>
-	<h4 class="listen">Sea Wolf</h4><br/>
-	<h2 class="listen">17.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1OlByJ5jsP9Eklfp03Xn8z?si=ku8E5Q3oQwaIvLJ4fx1QsQ" class="record"><em>Chewing Cotton Wool</em></a></h2>
-	<h4 class="listen">The Japanese House</h4><br/>
-	<h2 class="listen">18.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1uROBP2G4MP0O4w1v5Cpbg?si=JV4Zv8krS_uLIq3RfWSa_Q" class="record"><em>Imploding The Mirage</em></a></h2>
-	<h4 class="listen">The Killers</h4><br/>
-	<h2 class="listen">19.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6toqeyCvwGd0G4Lr1TPQCZ?si=N0INWYUlTleH5KBbV9B0Ug" class="record"><em>Shiver</em></a></h2>
-	<h4 class="listen">Jónsi</h4><br/>
-	<h2 class="listen">20.&nbsp;&nbsp;<a href="https://open.spotify.com/album/2fenSS68JI1h4Fo296JfGr?si=LQFilzkiQPGh6ifmeSO-xQ" class="record"><em>folklore</em></a> / <a href="https://open.spotify.com/album/2Xoteh7uEpea4TohMxjtaq?si=qYJQVZBAR1alRajc2P55WQ" class="record"><em>evermore</em></a></h2>
-	<h4 class="listen">Taylor Swift</h4><br/>
-	<h2 class="listen">21.&nbsp;&nbsp;<a href="https://open.spotify.com/album/04HMMwLmjkftjWy7xc6Bho?si=y6HdazsRTBmfEabuQ4NQsA" class="record"><em>Saint Cloud</em></a></h2>
-	<h4 class="listen">Waxahatchee</h4><br/>
-	<h2 class="listen">22.&nbsp;&nbsp;<a href="https://open.spotify.com/album/6cx4GVNs03Pu4ZczRnWiLd?si=KCGWN6ZmR4OJ4NP026n0VQ" class="record"><em>RTJ4</em></a></h2>
-	<h4 class="listen">Run the Jewels</h4><br/>
-	<h2 class="listen">23.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1X8kC5D2ke7puDYgalJtXj?si=nvbryP2XSZK28ubrUTPFtg" class="record"><em>Off Off On</em></a></h2>
-	<h4 class="listen">This is the Kit</h4><br/>
-	<h2 class="listen">24.&nbsp;&nbsp;<a href="https://open.spotify.com/album/1Lq5LGBs2UXG7TN337lJnJ?si=oUwmsflZSpye8SqRifWQ1w" class="record"><em>My Love is a Hurricane</em></a></h2>
-	<h4 class="listen">David Ramirez</h4><br/>
-	<h2 class="listen">25.&nbsp;&nbsp;<a href="https://open.spotify.com/album/34xmomKNR5tpBWAseLhmgX?si=shGrSzNIRU2y5EA8kxzosA" class="record"><em>The Balladeer</em></a></h2>
-	<h4 class="listen">Lori McKenna</h4><br/>
-  </div>
-</div>
-</div>
-</div>
+
+# 2020
+
+1. [_Half Moon Light_](https://open.spotify.com/album/6jqJNgfl234UYEWeP3iRF1?si=f8KkpOk4St-NioOZ1Jn69g"), The Lone Bellow
+
+2. [_Punisher/Copycat Killer_](https://open.spotify.com/album/2xECuqnvvmVktV7UO8Dd3s?si=y6THBrQlSXGtn7UnLRrVzw"), Phoebe Bridgers
+
+3. [_Shore_](https://open.spotify.com/album/0lmjCPEcec2k6L7ysNIcd3?si=ANdthlUuQEmsdkYq2oq11w"), Fleet Foxes
+
+4. [_Transmigration Blues_](https://open.spotify.com/album/2VeOfqGkgcCUk6dZejfm4f?si=kYQKay1vTMepSVrgIgzLQ"), The Dead Tongues
+
+5. [_Beginners_](https://open.spotify.com/album/5PLt7H7bUEQeKPdWhWf4SY?si=I0TXY8aeSgaIOE-RKKceXA"), Christian Lee Hutson
+
+6. [_The Avalanche_](https://open.spotify.com/album/27C6iNWoN1gmSHIpPGVgkS?si=AjJCSnl8TvSdw0246J8hiw"), Owen
+
+7. [_Cannot Be, Whatsoever_](https://open.spotify.com/album/1KkBDNtkZDW8COUNKAWRPw?si=JPbOkvE4ToCpM8ThuX7IuA"), Novo Amor
+
+8. [_Reunions_](https://open.spotify.com/album/5XIafkwTpyvL7jjLJx1xKz?si=gfvmmR5SQEaPl9V9ZHFPHQ"), Jason Isbell & the 400 Unit
+
+9. [_Free Love_](https://open.spotify.com/album/2KAPJ40On8JY1Yt64JJgTk?si=ZtTWbAGXTpGy45YwPrBb6Q"), Sylvan Esso
+
+10. [_The Slow Rush_](https://open.spotify.com/album/31qVWUdRrlb8thMvts0yYL?si=DIilFMW1TPa5-M0ZVdqJJA"), Tame Impala
+
+11. [_Shape & Destroy_](https://open.spotify.com/album/0pILyYJr65rEAWnogtd8Xt?si=oS-7xn7T3em6u3JZV62cg"), Ruston Kelly
+
+12. [_Suddenly_](https://open.spotify.com/album/4wSb7OhVUzw3u76lta9fJw?si=YoqSt4uoQKWXmDpj-jGglw"), Caribou
+
+13. [_The Ascension_](https://open.spotify.com/album/1tYHjJ50WowcNvDTLdf6Wo?si=pYT5TUVYTJOGTO4H3kVUlg"), Sufjan Stevens
+
+14. [_Peopled with Dreams_](https://open.spotify.com/album/3jjIZaP21vWBSrmQlsXrtv?si=RJlCJnkxT0qoe6fzwvyK6A"), John Mark McMillan
+
+15. [_Notes on a Conditional Form_](https://open.spotify.com/album/0o5xjCboti8vXhdoUG9LYi?si=3qcx52znRFmvZKG0JzKuIw"), The 1975
+
+16. [_Through A Dark Wood_](https://open.spotify.com/album/1XlM4F3RRu52tpv8YXM1O4?si=GP2ybncUS0OFH71Zx9rniw"), Sea Wolf
+
+17. [_Chewing Cotton Wool_](https://open.spotify.com/album/1OlByJ5jsP9Eklfp03Xn8z?si=ku8E5Q3oQwaIvLJ4fx1QsQ"), The Japanese House
+
+18. [_Imploding The Mirage_](https://open.spotify.com/album/1uROBP2G4MP0O4w1v5Cpbg?si=JV4Zv8krSuLIq3RfWSaQ"), The Killers
+
+19. [_Shiver_](https://open.spotify.com/album/6toqeyCvwGd0G4Lr1TPQCZ?si=N0INWYUlTleH5KBbV9B0Ug"), Jónsi
+
+20. [_folklore_](https://open.spotify.com/album/2fenSS68JI1h4Fo296JfGr?si=LQFilzkiQPGh6ifmeSO-xQ"), Taylor Swift
+
+21. [_Saint Cloud_](https://open.spotify.com/album/04HMMwLmjkftjWy7xc6Bho?si=y6HdazsRTBmfEabuQ4NQsA"), Waxahatchee
+
+22. [_RTJ4_](https://open.spotify.com/album/6cx4GVNs03Pu4ZczRnWiLd?si=KCGWN6ZmR4OJ4NP026n0VQ"), Run the Jewels
+
+23. [_Off Off On_](https://open.spotify.com/album/1X8kC5D2ke7puDYgalJtXj?si=nvbryP2XSZK28ubrUTPFtg"), This is the Kit
+
+24. [_My Love is a Hurricane_](https://open.spotify.com/album/1Lq5LGBs2UXG7TN337lJnJ?si=oUwmsflZSpye8SqRifWQ1w"), David Ramirez
+
+25. [_The Balladeer_](https://open.spotify.com/album/34xmomKNR5tpBWAseLhmgX?si=shGrSzNIRU2y5EA8kxzosA"), Lori McKenna
+
+##### Here's my favorite track from each record:
+
+<a href="" class="btn_secondary">Listen on Spotify ›</a>
+
+---
 
 <!-- 2019 -->
-<div class="main-wrapper">
-<div class="main-inner">	
-<div class="row">
-  <div class="column-third col-third-1_listen">
-  	&nbsp;
-  </div>
-  <div class="column-third col-third-2_listen">
-  	<h3 class="listen">2019</h3>
-  	<h5 class="listen"><a href="https://open.spotify.com/playlist/0RXcNXBp3KFNt9gjKIWZAR?si=9txCOaGRSq2xarqDbN0HDw" class="playlist">Spin the Playlist</a></h5>
-  </div>	
-  <!-- List -->
-  <div class="column-third col-third-3_listen">
-  	<h2 class="listen">01.&nbsp;&nbsp;<a href="" class="record"><em>Better Oblivion Community Center</em></a></h2>
-	<h4 class="listen">Better Oblivion Community Center</h4><br/>
-	<h2 class="listen">02.&nbsp;&nbsp;<a href="" class="record"><em>Phoenix</em></a></h2>
-	<h4 class="listen">Pedro the Lion</h4><br/>
-	<h2 class="listen">03.&nbsp;&nbsp;<a href="" class="record"><em>I Love You. It's a Fever Dream.</em></a></h2>
-	<h4 class="listen">Tallest Man on Earth</h4><br/>
-	<h2 class="listen">04.&nbsp;&nbsp;<a href="" class="record"><em>Eraserland</em></a></h2>
-	<h4 class="listen">Strand of Oaks</h4><br/>
-	<h2 class="listen">05.&nbsp;&nbsp;<a href="" class="record"><em>Terms of Surrender</em></a></h2>
-	<h4 class="listen">Hiss Golden Messenger</h4><br/>
-	<h2 class="listen">06.&nbsp;&nbsp;<a href="" class="record"><em>i,i</em></a></h2>
-	<h4 class="listen">Bon Iver</h4><br/>
-	<h2 class="listen">07.&nbsp;&nbsp;<a href="" class="record"><em>Father of the Bride</em></a></h2>
-	<h4 class="listen">Vampire Weekend</h4><br/>
-	<h2 class="listen">08.&nbsp;&nbsp;<a href="" class="record"><em>I am Easy to Find</em></a></h2>
-	<h4 class="listen">The National</h4><br/>
-	<h2 class="listen">09.&nbsp;&nbsp;<a href="" class="record"><em>UFOF / Two Hands</em></a></h2>
-	<h4 class="listen">Big Thief</h4><br/>
-	<h2 class="listen">10.&nbsp;&nbsp;<a href="" class="record"><em>Lover</em></a></h2>
-	<h4 class="listen">Noah Gunderson</h4><br/>
-	<h2 class="listen">11.&nbsp;&nbsp;<a href="" class="record"><em>New Ways</em></a></h2>
-	<h4 class="listen">Leif Vollebekk</h4><br/>
-	<h2 class="listen">12.&nbsp;&nbsp;<a href="" class="record"><em>Goes West</em></a></h2>
-	<h4 class="listen">William Tyler</h4><br/> 
-	<h2 class="listen">13.&nbsp;&nbsp;<a href="" class="record"><em>The Highwomen</em></a></h2>
-	<h4 class="listen">The Highwomen</h4><br/>
-	<h2 class="listen">14.&nbsp;&nbsp;<a href="" class="record"><em>Wooh Dang</em></a></h2>
-	<h4 class="listen">Daniel Norgren</h4><br/>
-	<h2 class="listen">15.&nbsp;&nbsp;<a href="" class="record"><em>III</em></a></h2>
-	<h4 class="listen">The Lumineers</h4><br/>
-	<h2 class="listen">16.&nbsp;&nbsp;<a href="" class="record"><em>Secondhand Smoke</em></a></h2>
-	<h4 class="listen">Sean McConnell</h4><br/>
-	<h2 class="listen">17.&nbsp;&nbsp;<a href="" class="record"><em>Jaime</em></a></h2>
-	<h4 class="listen">Brittany Howard</h4><br/>
-	<h2 class="listen">18.&nbsp;&nbsp;<a href="" class="record"><em>Violet Street</em></a></h2>
-	<h4 class="listen">Local Natives</h4><br/>
-	<h2 class="listen">19.&nbsp;&nbsp;<a href="" class="record"><em>Look Up & Fly Away</em></a></h2>
-	<h4 class="listen">Darlingside</h4><br/>
-	<h2 class="listen">20.&nbsp;&nbsp;<a href="" class="record"><em>Front Porch</em></a></h2>
-	<h4 class="listen">Joy Williams</h4><br/>
-	<h2 class="listen">21.&nbsp;&nbsp;<a href="" class="record"><em>As Far As I Can See</em></a></h2>
-	<h4 class="listen">Phil Cook</h4><br/>
-	<h2 class="listen">22.&nbsp;&nbsp;<a href="" class="record"><em>Ode to Joy</em></a></h2>
-	<h4 class="listen">Wilco</h4><br/>
-	<h2 class="listen">23.&nbsp;&nbsp;<a href="" class="record"><em>Silencia - Hammock</em></a></h2>
-	<h4 class="listen">Hammock</h4><br/>
-	<h2 class="listen">24.&nbsp;&nbsp;<a href="" class="record"><em>American Football (LP3)</em></a></h2>
-	<h4 class="listen">American Football</h4><br/>
-	<h2 class="listen">25.&nbsp;&nbsp;<a href="" class="record"><em>Good at Falling</em></a></h2>
-	<h4 class="listen">The Japanese House</h4><br/>	
-  </div>
-</div>
-</div>
-</div>
 
-<!-- 2018-->
-<div class="main-wrapper">
-<div class="main-inner">	
-<div class="row">
-  <div class="column-third col-third-1_listen">
-  	&nbsp;
-  </div>
-  <div class="column-third col-third-2_listen">
-  	<h3 class="listen">2018</h3>
-  	<h5 class="listen"><a href="https://open.spotify.com/playlist/5oOLmD3CsvR4XZFudO53SA?si=gSBcMXdMT7aw6n51C0znAw" class="playlist">Spin the Playlist</a></h5>
-  </div>	
-  <!-- List -->
-  <div class="column-third col-third-3_listen">
-  	<h2 class="listen">01.&nbsp;&nbsp;<a href="" class="record"><em>By the Way, I Forgive You</em></a></h2>
-	<h4 class="listen">Brandi Carlile</h4><br/>
-	<h2 class="listen">02.&nbsp;&nbsp;<a href="" class="record"><em>A Brief Inquiry Into Online Relationships</em></a></h2>
-	<h4 class="listen">The 1975</h4><br/>
-	<h2 class="listen">03.&nbsp;&nbsp;<a href="" class="record"><em>Hundred Acres</em></a></h2>
-	<h4 class="listen">S. Carey</h4><br/>
-	<h2 class="listen">04.&nbsp;&nbsp;<a href="" class="record"><em>Evening Machines</em></a></h2>
-	<h4 class="listen">Gregory Alan Isokov</h4><br/>
-	<h2 class="listen">05.&nbsp;&nbsp;<a href="" class="record"><em>boygenius</em></a></h2>
-	<h4 class="listen">boygenius</h4><br/>
-	<h2 class="listen">06.&nbsp;&nbsp;<a href="" class="record"><em>C'est La Vie</em></a></h2>
-	<h4 class="listen">Phosphorescent</h4><br/>
-	<h2 class="listen">07.&nbsp;&nbsp;<a href="" class="record"><em>Summertime Songs</em></a></h2>
-	<h4 class="listen">Field Report</h4><br/>
-	<h2 class="listen">08.&nbsp;&nbsp;<a href="" class="record"><em>Big Red Machine</em></a></h2>
-	<h4 class="listen">Big Red Machine</h4><br/>
-	<h2 class="listen">09.&nbsp;&nbsp;<a href="" class="record"><em>Traversa</em></a></h2>
-	<h4 class="listen">Geotic</h4><br/>
-	<h2 class="listen">10.&nbsp;&nbsp;<a href="" class="record"><em>The Hex</em></a></h2>
-	<h4 class="listen">Richard Swift</h4><br/>
-	<h2 class="listen">11.&nbsp;&nbsp;<a href="" class="record"><em>Caer</em></a></h2>
-	<h4 class="listen">Twin Shadow</h4><br/>
-	<h2 class="listen">12.&nbsp;&nbsp;<a href="" class="record"><em>To the Sunset</em></a></h2>
-	<h4 class="listen">Amanda Shires</h4><br/>
-	<h2 class="listen">13.&nbsp;&nbsp;<a href="" class="record"><em>Passwords</em></a></h2>
-	<h4 class="listen">Dawes</h4><br/>
-	<h2 class="listen">14.&nbsp;&nbsp;<a href="" class="record"><em>Noonday Dream</em></a></h2>
-	<h4 class="listen">Ben Howard</h4><br/>
-	<h2 class="listen">15.&nbsp;&nbsp;<a href="" class="record"><em>Malibu Nights</em></a></h2>
-	<h4 class="listen">LANY</h4><br/>
-	<h2 class="listen">16.&nbsp;&nbsp;<a href="" class="record"><em>DAYTONA</em></a></h2>
-	<h4 class="listen">Pusha T</h4><br/>
-	<h2 class="listen">17.&nbsp;&nbsp;<a href="" class="record"><em>My New Moon</em></a></h2>
-	<h4 class="listen">Amos Lee</h4><br/>
-	<h2 class="listen">18.&nbsp;&nbsp;<a href="" class="record"><em>HOME</em></a></h2>
-	<h4 class="listen">John Butler Trio</h4><br/>
-	<h2 class="listen">19.&nbsp;&nbsp;<a href="" class="record"><em>Honey</em></a></h2>
-	<h4 class="listen">Robyn</h4><br/>
-	<h2 class="listen">20.&nbsp;&nbsp;<a href="" class="record"><em>Golden Hour</em></a></h2>
-	<h4 class="listen">Kacey Musgraves</h4><br/>
-	<h2 class="listen">21.&nbsp;&nbsp;<a href="" class="record"><em>WARM</em></a></h2>
-	<h4 class="listen">Jeff Tweedy</h4><br/>
-	<h2 class="listen">22.&nbsp;&nbsp;<a href="" class="record"><em>Kindness, A Rebel</em></a></h2>
-	<h4 class="listen">River Whyless</h4><br/>
-	<h2 class="listen">23.&nbsp;&nbsp;<a href="" class="record"><em>DROGAS WAVE</em></a></h2>
-	<h4 class="listen">Lupe Fiasco</h4><br/>
-	<h2 class="listen">24.&nbsp;&nbsp;<a href="" class="record"><em>Birthplace</em></a></h2>
-	<h4 class="listen">Novo Amor</h4><br/>
-	<h2 class="listen">25.&nbsp;&nbsp;<a href="" class="record"><em>Singularity</em></a></h2>
-	<h4 class="listen">Jon Hopkins</h4><br/>	
-  </div> 
-</div>
-</div>
-</div>
+# 2019
 
-<!-- 2017-->
-<div class="main-wrapper">
-<div class="main-inner">	
-<div class="row">
-  <div class="column-third col-third-1_listen">
-  	&nbsp;
-  </div>
-  <div class="column-third col-third-2_listen">
-  	<h3 class="listen">2017</h3>
-  	<h5 class="listen"><a href="https://open.spotify.com/playlist/18VHKcDWkoilEHuB9tYZ7z?si=66ypWJwKT9uZ4o7j2mjjXw" class="playlist">Spin the Playlist</a></h5>
-  </div>	
-  <!-- List -->
-  <div class="column-third col-third-3_listen">
-  	<h2 class="listen">01.&nbsp;&nbsp;<a href="" class="record"><em>Hallelujah Anyhow</em></a></h2>
-	<h4 class="listen">Hiss Golden Messenger</h4><br/>
-	<h2 class="listen">02.&nbsp;&nbsp;<a href="" class="record"><em>A Deeper Understanding</em></a></h2>
-	<h4 class="listen">The War on Drugs</h4><br/>
-	<h2 class="listen">03.&nbsp;&nbsp;<a href="" class="record"><em>DAMN.</em></a></h2>
-	<h4 class="listen">Kendrick Lamar</h4><br/>
-	<h2 class="listen">04.&nbsp;&nbsp;<a href="" class="record"><em>Something to Tell You</em></a></h2>
-	<h4 class="listen">HAIM</h4><br/>
-	<h2 class="listen">05.&nbsp;&nbsp;<a href="" class="record"><em>Stranger in the Alps</em></a></h2>
-	<h4 class="listen">Phoebe Bridgers</h4><br/>
-	<h2 class="listen">06.&nbsp;&nbsp;<a href="" class="record"><em>The Nashville Sound</em></a></h2>
-	<h4 class="listen">Jason Isbell &amp; the 400 Unit</h4><br/>
-	<h2 class="listen">07.&nbsp;&nbsp;<a href="" class="record"><em>Twin Solitude</em></a></h2>
-	<h4 class="listen">Leif Vollebekk</h4><br/>
-	<h2 class="listen">08.&nbsp;&nbsp;<a href="" class="record"><em>Just for Us</em></a></h2>
-	<h4 class="listen">Francis and the Lights</h4><br/>
-	<h2 class="listen">09.&nbsp;&nbsp;<a href="" class="record"><em>Prisoner</em></a></h2>
-	<h4 class="listen">Ryan Adams</h4><br/>
-	<h2 class="listen">10.&nbsp;&nbsp;<a href="" class="record"><em>We’re Not Going Anywhere</em></a></h2>
-	<h4 class="listen">David Ramirez</h4><br/>
-	<h2 class="listen">11.&nbsp;&nbsp;<a href="" class="record"><em>Crack Up</em></a></h2>
-	<h4 class="listen">Fleet Foxes</h4><br/>
-	<h2 class="listen">12.&nbsp;&nbsp;<a href="" class="record"><em>Afterglow</em></a></h2>
-	<h4 class="listen">Ásgeir</h4><br/>
-	<h2 class="listen">13.&nbsp;&nbsp;<a href="" class="record"><em>Wonderful, Wonderful</em></a></h2>
-	<h4 class="listen">The Killers</h4><br/>
-	<h2 class="listen">14.&nbsp;&nbsp;<a href="" class="record"><em>Near the Wild Heart of Life</em></a></h2>
-	<h4 class="listen">Japandroids</h4><br/>
-	<h2 class="listen">15.&nbsp;&nbsp;<a href="" class="record"><em>Turn Out the Lights</em></a></h2>
-	<h4 class="listen">Julien Baker</h4><br/>
-	<h2 class="listen">16.&nbsp;&nbsp;<a href="" class="record"><em>Sleep Well Beast</em></a></h2>
-	<h4 class="listen">The National</h4><br/>
-	<h2 class="listen">17.&nbsp;&nbsp;<a href="" class="record"><em>Colors</em></a></h2>
-	<h4 class="listen">Beck</h4><br/>
-	<h2 class="listen">18.&nbsp;&nbsp;<a href="" class="record"><em>Beast Epic</em></a></h2>
-	<h4 class="listen">Iron &amp; Wine</h4><br/>
-	<h2 class="listen">19.&nbsp;&nbsp;<a href="" class="record"><em>Hard Love</em></a></h2>
-	<h4 class="listen">Strand of Oaks</h4><br/>
-	<h2 class="listen">20.&nbsp;&nbsp;<a href="" class="record"><em>Half-Light</em></a></h2>
-	<h4 class="listen">Rostam</h4><br/>
-	<h2 class="listen">21.&nbsp;&nbsp;<a href="" class="record"><em>Romaplasm</em></a></h2>
-	<h4 class="listen">Baths</h4><br/>
-	<h2 class="listen">22.&nbsp;&nbsp;<a href="" class="record"><em>Pleasure</em></a></h2>
-	<h4 class="listen">Feist</h4><br/>
-	<h2 class="listen">23.&nbsp;&nbsp;<a href="" class="record"><em>Hug of Thunder</em></a></h2>
-	<h4 class="listen">Broken Social Scene</h4><br/>
-	<h2 class="listen">24.&nbsp;&nbsp;<a href="" class="record"><em>Whiteout Conditions</em></a></h2>
-	<h4 class="listen">The New Pornographers</h4><br/>
-	<h2 class="listen">25.&nbsp;&nbsp;<a href="" class="record"><em>The Thrill of it All</em></a></h2>
-	<h4 class="listen">Sam Smith</h4><br/>	
-  </div> 
-</div>
-</div>
-</div>
+01.  [_Better Oblivion Community Center_](), Better Oblivion Community Center
 
+02.  [_Phoenix_](), Pedro the Lion
+
+03.  [_I Love You. It's a Fever Dream._](), Tallest Man on Earth
+
+04.  [_Eraserland_](), Strand of Oaks
+
+05.  [_Terms of Surrender_](), Hiss Golden Messenger
+
+06.  [_i,i_](), Bon Iver
+
+07.  [_Father of the Bride_](), Vampire Weekend
+
+08.  [_I am Easy to Find_](), The National
+
+09.  [_UFOF / Two Hands_](), Big Thief
+
+10.  [_Lover_](), Noah Gunderson
+
+11.  [_New Ways_](), Leif Vollebekk
+
+12.  [_Goes West_](), William Tyler
+
+13.  [_The Highwomen_](), The Highwomen
+
+14.  [_Wooh Dang_](), Daniel Norgren
+
+15.  [_III_](), The Lumineers
+
+16.  [_Secondhand Smoke_](), Sean McConnell
+
+17.  [_Jaime_](), Brittany Howard
+
+18.  [_Violet Street_](), Local Natives
+
+19.  [_Look Up & Fly Away_](), Darlingside
+
+20.  [_Front Porch_](), Joy Williams
+
+21.  [_As Far As I Can See_](), Phil Cook
+
+22.  [_Ode to Joy_](), Wilco
+
+23.  [_Silencia_](), Hammock
+
+24.  [_American Football (LP3)_](), American Football
+
+25.  [_Good at Falling_](), The Japanese House
+
+##### Here's my favorite track from each record:
+
+<a href="" class="btn_secondary">Listen on Spotify ›</a>
+
+---
+
+<!-- 2018 -->
+
+# 2018
+
+01.  [_By the Way, I Forgive You_](), Brandi Carlile
+
+02.  [_A Brief Inquiry Into Online Relationships_](), The 1975
+
+03.  [_Hundred Acres_](), S. Carey
+
+04.  [_Evening Machines_](), Gregory Alan Isokov
+
+05.  [_boygenius_](), boygenius
+
+06.  [_C'est La Vie_](), Phosphorescent
+
+07.  [_Summertime Songs_](), Field Report
+
+08.  [_Big Red Machine_](), Big Red Machine
+
+09.  [_Traversa_](), Geotic
+
+10.  [_The Hex_](), Richard Swift
+
+11.  [_Caer_](), Twin Shadow
+
+12.  [_To the Sunset_](), Amanda Shires
+
+13.  [_Passwords_](), Dawes
+
+14.  [_Noonday Dream_](), Ben Howard
+
+15.  [_Malibu Nights_](), LANY
+
+16.  [_DAYTONA_](), Pusha T
+
+17.  [_My New Moon_](), Amos Lee
+
+18.  [_HOME_](), John Butler Trio
+
+19.  [_Honey_](), Robyn
+
+20.  [_Golden Hour_](), Kacey Musgraves
+
+21.  [_WARM_](), Jeff Tweedy
+
+22.  [_Kindness, A Rebel_](), River Whyless
+
+23.  [_DROGAS WAVE_](), Lupe Fiasco
+
+24.  [_Birthplace_](), Novo Amor
+
+25.  [_Singularity_](), Jon Hopkins
+
+##### Here's my favorite track from each record:
+
+<a href="" class="btn_secondary">Listen on Spotify ›</a>
+
+---
+
+<!-- 2017 -->
+
+# 2017
+
+01.  [_Hallelujah Anyhow_](), Hiss Golden Messenger
+
+02.  [_A Deeper Understanding_](), The War on Drugs
+
+03.  [_DAMN._](), Kendrick Lamar
+
+04.  [_Something to Tell You_](), HAIM
+
+05.  [_Stranger in the Alps_](), Phoebe Bridgers
+
+06.  [_The Nashville Sound_](), Jason Isbell & the 400 Unit
+
+07.  [_Twin Solitude_](), Leif Vollebekk
+
+08.  [_Just for Us_](), Francis and the Lights
+
+09.  [_Prisoner_](), Ryan Adams
+
+10.  [_We’re Not Going Anywhere_](), David Ramirez
+
+11.  [_ Up_](), Fleet Foxes
+
+12.  [_Afterglow_](), Ásgeir
+
+13.  [_Wonderful, Wonderful_](), The Killers
+
+14.  [_Near the Wild Heart of Life_](), Japandroids
+
+15.  [_Turn Out the Lights_](), Julien Baker
+
+16.  [_Sleep Well Beast_](), The National
+
+17.  [_Colors_](), Beck
+
+18.  [_Beast Epic_](), Iron & Wine
+
+19.  [_Hard Love_](), Strand of Oaks
+
+20.  [_Half-Light_](), Rostam
+
+21.  [_Romaplasm_](), Baths
+
+22.  [_Pleasure_](), Feist
+
+23.  [_Hug of Thunder_](), Broken Social Scene
+
+24.  [_Whiteout Conditions_](), The New Pornographers
+
+25.  [_The Thrill of it All_](), Sam Smith
+
+##### Here's my favorite track from each record:
+
+<a href="" class="btn_secondary">Listen on Spotify ›</a>
